--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
   "name": "notion-db-merge",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "Notion DB Merger",
+  "author": "Alex Budurovici",
+  "license": "AGPL-3.0-or-later",
+  "homepage": "https://github.com/spofibo/notion-merge-dbs",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/spofibo/notion-merge-dbs.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Spofibo/notion-merge-dbs/issues"
+  },
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.3.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "AGPL-3.0-or-later",
   "dependencies": {
     "@notionhq/client": "^0.4.12",
     "bottleneck": "^2.19.5",
